force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/FPSA_Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Effort_Estimate__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Enter the effort estimated to complete this in hours</inlineHelpText>
    <label>Effort Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>