force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Milestone</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Issue must be part of the same project as the selected milestone.</errorMessage>
        <filterItems>
            <field>$Source.MPM4_BASE__Project__c</field>
            <operation>equals</operation>
            <valueField>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>