force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>Issue must be part of the same project and milestone as the selected task.</errorMessage>
        <filterItems>
            <field>$Source.MPM4_BASE__Project__c</field>
            <operation>equals</operation>
            <valueField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Lookup__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.MPM4_BASE__Project_Milestone__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.MPM4_BASE__Project_Milestone__c</field>
            <operation>equals</operation>
            <valueField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>