force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FPSA created field. Assigned Resource who work on the issue.</description>
    <inlineHelpText>Assigned Resource who work on the issue.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>